[package]
name = "hello-d1"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { version = "0.8.0", git = "https://github.com/rust-embedded/riscv" }
riscv-rt = "0.9.0"
d1-pac = { version = "0.0.24", features = ["rt"] }
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
