[package]
name = "hello-d1"
version = "0.1.0"
edition = "2021"

[dependencies]
#riscv = { version = "=0.8.0" }
#riscv-rt = "=0.9.0"
riscv = { git = "https://github.com/rust-embedded/riscv" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt", rev = "28806e0b0ca3b3980ef3f886d5b56283d47daef1" }
#d1-pac = { version = "=0.0.27" } #, features = ["rt"] }
#d1-pac = { path = "../upstream/d1-temp" }
d1-pac = { git = "https://github.com/antoinevg/aw-pac", branch = "antoinevg/audio_codec" }
panic-halt = "=0.2.0"

#twiddle = { path = "../twiddle.git" }
twiddle = { git = "https://github.com/antoinevg//twiddle" }

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
