[package]
name = "hello-d1"
version = "0.1.0"
edition = "2021"

[dependencies]
# Waiting for release: https://github.com/rust-embedded/riscv/pull/110
#riscv = { version = "=0.9.0", features = ["critical-section-single-hart"] }
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["critical-section-single-hart"] }

# Waiting for release: https://github.com/rust-embedded/riscv-rt/issues/102
#riscv-rt = { version = "=0.9.0" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt" }

d1-pac = { version = "=0.0.30", features = ["critical-section"] }
#d1-pac = { git = "https://github.com/duskmoon314/aw-pac" }
#d1-pac = { git = "https://github.com/antoinevg/aw-pac", branch = "antoinevg/i2s" }
#d1-pac = { path = "../upstream/aw-pac.git/d1-pac" }

panic-halt = "=0.2.0"

[profile.dev]
opt-level = 2            # anything lower than 2 does not work
debug-assertions = true  # obviously we have a problem
overflow-checks = true   # obviously we have a problem
codegen-units = 1
incremental = false
debug = true
lto = true               # false crashes ??

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
